# ztm-rust

.devcontainer/: Dockerfile  devcontainer.json
activities/: Cargo.toml
clipstash/: Cargo.toml
clipstash/src/lib/: mod.rs
clipstash/src/lib/data/: mod.rs  model.rs  query.rs
clipstash/src/lib/domain/: maintenance.rs  mod.rs
clipstash/src/lib/domain/clip/: mod.rs
clipstash/src/lib/domain/clip/field/: content.rs  shortcode.rs  title.rs
clipstash/src/lib/service/: action.rs  mod.rs
clipstash/src/lib/web/: api.rs  ctx.rs  hitcounter.rs  http.rs  mod.rs  renderer.rs
